[package]
name = "shine-core"
version = "0.1.0"
edition = "2021"

[features]
default = ["native_default"]

native_default = [
    "tokio",
]

web_default = [
    "getrandom/js", # see https://docs.rs/getrandom/#webassembly-support
    "gloo-timers",
]

[dependencies]
log = "0.4"
thiserror = "1.0"

serde = { version = "1.0", features = ["derive"] }
data-encoding = "2.3"
getrandom = "0.2"

futures = "0.3"
pin-project = "1.0"
downcast-rs = "1.2"
smallbox = "0.8"
slotmap = "1.0"
atomic_refcell = "0.1"
crossbeam = "0.8"
tokio = { version = "1.19", features = ["time"], optional = true }

gloo-timers = { version = "0.2", features = ["futures"], optional = true }

[dev-dependencies]
shine-test = { path = "../test", version = "0.1.0" }
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"