[package]
name = "shine-test"
version = "0.1.0"
edition = "2021"

[features]
default = []
web_default = [ "shine-test-macro/wasm" ]

[dependencies]
log = "0.4"
shine-test-macro = { path = "../test-macro", version = "0.1.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
color-backtrace = "0.5"
tokio = { version = "1.19", features = ["macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-logger = "0.2"
wasm-bindgen-test = "0.3"
